--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "EEMBC License",
   "dependencies": {
     "debug": "^4.1.1",
     "ffi": "^2.3.0"
