--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "Apache 2.0",
   "dependencies": {
     "debug": "^4.1.1",
-    "ffi": "^2.3.0"
+    "ffi": "^2.3.0",
+    "sprintf-js": "^1.1.2"
   }
 }
